# NoiseHound

./: .gitignore  README.md  check_co2.py  check_sr.py  check_sr_channels.py  check_sr_vals.py  consolidate_co2.py  correlate_sr_temps.py  extract_itf_status.py  list_asc_mirrors.py  list_sr_channels.py  merge_sr.py  peak_period.py  probe_ni.py  pyproject.toml
configs/: channels_fp_aux2.txt  channels_fp_aux3.txt
data/: watchlist_1426892892.csv
noisehound/: __init__.py  cli.py  datafind.py  detect.py  frames.py  rank.py
scripts/: analyze_glitch_vs_sr_tx.py  analyze_sr_steps.py  build_core_candidate_lists.py  causality_analysis.py  cc_bootstrap_env.sh  cc_make_frame_lists.sh  cc_stage_hpss.sh  cc_sync.sh  channels_fp_aux.txt  channels_fp_aux4.txt  enlarge_legend_dots_1hz_pngs.py  extract_50hz_archive_gwpy.py  extract_50hz_archive_means.py  extract_itf_lock.py  extract_itf_lock_hourly_states.py  extract_lsc_supp_1426891202_1426897935_local.sh  extract_ni_laser_temps.py  extract_ni_tcs_extra.py  extract_raw_interval_shard.py  fetch_logbook_entries.py  launch_50hz_subworkers.py  launch_full_scan.sh  list_raw_asc_channels.py  make_overlay_plot.py  merge_logbook_channels.py  merge_segment_scans.py  migrate_csv_columns.py  noisehound_rank_slow_sensors.slurm  plot_asc_err_corr_glitch_response.py  plot_asc_err_corr_recovery.py  plot_asc_err_corr_short_window_detrend.py  plot_asc_err_corr_shortlist.py  plot_asc_glitch_filtered.py  plot_asc_glitch_probe.py  plot_disappearance_timeseries.py  plot_glitch_context.py  plot_glitch_response.py  plot_glitch_response_exact_from_probe.py  (+46 more)
(+59 files in other folders)
